Fixed z-index for Header component

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,6 +5,7 @@ header {
   width: 100%;
   border-bottom: 1px solid grey;
   transition: all 0.2s ease-in-out;
+  z-index: 3000;
 }
 
 .hidden {
